; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_router_planner.c_TargetShardIntervalForFastPathQuery.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_router_planner.c_TargetShardIntervalForFastPathQuery.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_7__*, i32**, i32*)* @TargetShardIntervalForFastPathQuery to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @TargetShardIntervalForFastPathQuery(%struct.TYPE_7__* %0, i32** %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32* null, i32** %7, align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %13 = call i32 @ExtractFirstDistributedTableId(%struct.TYPE_7__* %12)
  store i32 %13, i32* %8, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %9, align 8
  store i32 1, i32* %10, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %10, align 4
  %21 = load i32*, i32** %9, align 8
  %22 = call i32 @make_ands_implicit(i32* %21)
  %23 = call i32* @PruneShards(i32 %19, i32 %20, i32 %22, i32** %7)
  store i32* %23, i32** %11, align 8
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %25 = call i32 @FastPathRouterQuery(%struct.TYPE_7__* %24)
  %26 = call i32 @Assert(i32 %25)
  %27 = load i32*, i32** %11, align 8
  %28 = call i32 @list_length(i32* %27)
  %29 = icmp sgt i32 %28, 1
  br i1 %29, label %30, label %32

30:                                               ; preds = %3
  %31 = load i32*, i32** %6, align 8
  store i32 1, i32* %31, align 4
  br label %43

32:                                               ; preds = %3
  %33 = load i32*, i32** %11, align 8
  %34 = call i32 @list_length(i32* %33)
  %35 = icmp eq i32 %34, 1
  br i1 %35, label %36, label %42

36:                                               ; preds = %32
  %37 = load i32**, i32*** %5, align 8
  %38 = icmp ne i32** %37, null
  br i1 %38, label %39, label %42

39:                                               ; preds = %36
  %40 = load i32*, i32** %7, align 8
  %41 = load i32**, i32*** %5, align 8
  store i32* %40, i32** %41, align 8
  br label %42

42:                                               ; preds = %39, %36, %32
  br label %43

43:                                               ; preds = %42, %30
  %44 = load i32*, i32** %11, align 8
  ret i32* %44
}

declare dso_local i32 @ExtractFirstDistributedTableId(%struct.TYPE_7__*) #1

declare dso_local i32* @PruneShards(i32, i32, i32, i32**) #1

declare dso_local i32 @make_ands_implicit(i32*) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @FastPathRouterQuery(%struct.TYPE_7__*) #1

declare dso_local i32 @list_length(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
